# jsonl2sqlite

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
jsonl2sqlite/: cli.py
tests/: test__.py
