[tool.poetry]
name = "jsonl2sqlite"
version = "0.1.0"
description = "Convert JSONLines files to a SQLite database."
authors = ["Tomoya Kose <tomoya@mitsuse.jp>"]
readme = "README.md"
packages = [
    { include = "jsonl2sqlite" },
]

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
pypika = "^0.48.9"

[tool.poetry.scripts]
jsonl2sqlite = "jsonl2sqlite.cli:app"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
ruff = "^0.1.5"
black = "^23.11.0"
pytest = "^7.4.3"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
